# Agree-Autogen

./: .env.example  .gitattributes  .gitignore  ARTIFACT_SCOPE.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  environment.yml  pyproject.toml  requirements.txt  run_case.py
.github/: pull_request_template.md
configs/: README.md  excluded_cases_large_model.json  experiments.yaml  model.yaml  model_config.yaml  rag.yaml  rag_config.yaml  validator.yaml  validator_config.yaml
data/: README.md
docs/: architecture.md  artifact.md  artifact_evaluation.md  benchmark_description.md  experiment_design.md  experiment_matrix.md  experiments.md  installation.md  knowledge_base.md  knowledge_base_reconstruction.md  known_limitations.md  pipeline.md  quick_start.md  reproducibility.md  reproducible_experiment.md  reproduction.md  result_schema.md  troubleshooting.md  usage.md  validator_setup.md
experiments/: README.md  compute_metrics.py  run_ablation.py  run_cross_model.py  run_e1_bare_model.py  run_e2_full_framework.py  run_experiment.py  settings.yaml
knowledge_base/: BUILD_INDEX.md  FORMAT.md  README.md  SOURCE_INDEX.md  local_sources.example.yaml  manifest.yaml  sources.yaml
prompts/: README.md  agree_generator.txt  agree_generator_prompt.txt  bare_direct.txt  fusion_prompt.txt  model_analyst.txt  model_analyst_prompt.txt  model_fusion.txt  model_fusion_plan.txt  model_fusion_target.txt  rag_digest.txt  repair_prompt.txt  requirement_analyst.txt  requirement_analyst_prompt.txt  validation_repair.txt  validation_repair_execute.txt  validation_repair_plan.txt
results/: FULL_RESULTS_RELEASE_MANIFEST.json  README.md  all_experiments_summary_20260622.csv  all_experiments_summary_20260622.md  completed_experiments_summary.csv  completed_experiments_summary.md  copy_manifest.json
scripts/: README.md  aggregate_experiment_results.py  audit_paragraph_req_quality.py  build_rag_index.py  clean_source_requirements.py  curate_sources_requirements_mixed.py  generate_aadllib_requirements.py  prepare_gf_monitor_case.py  rebuild_source_requirements_for_agree.py  regenerate_sources_agree_reqs.py  regenerate_sources_fresh_agree_reqs.py  regenerate_sources_strong_model_reqs.py  run_batch.py  run_case.py  run_files.py  (+25 more)
(+81222 files in other folders)
