[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agree-autogen"
version = "0.1.0"
description = "A validation-centered multi-agent framework for generating AGREE contracts for AADL models."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Yulong An" }
]
dependencies = [
  "openai>=1.0.0",
  "langchain>=0.2.0",
  "langchain-community>=0.2.0",
  "chromadb>=0.5.0",
  "sentence-transformers>=2.7.0",
  "tiktoken>=0.7.0",
  "pypdf>=4.0.0",
]

[project.optional-dependencies]
windows = ["pywin32>=306"]
test = ["pytest>=8.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
