[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agree-autogen"
version = "0.1.0"
description = "A multi-agent framework for generating fused AADL+AGREE artifacts from natural-language requirements and AADL architectures."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Yulong An" }
]
dependencies = [
  "openai>=1.0.0",
  "langchain>=0.2.0",
  "langchain-community>=0.2.0",
  "chromadb>=0.5.0",
  "sentence-transformers>=2.7.0",
  "tiktoken>=0.7.0",
  "pypdf>=4.0.0",
  "PyYAML>=6.0.0",
]

keywords = ["AADL", "AGREE", "formal methods", "requirements", "LLM", "verification"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
windows = ["pywin32>=306"]
test = ["pytest>=8.0.0"]

[project.urls]
Homepage = "https://github.com/a-yulong/Agree-Autogen"
Repository = "https://github.com/a-yulong/Agree-Autogen"
Issues = "https://github.com/a-yulong/Agree-Autogen/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
